# TeachBooks-Fetch

./: MANUAL.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/teachbooks_fetch/: __init__.py
